<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutsHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorBackgroundFloating"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:cropToPadding="false"
                android:elevation="24dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/logo_icon_hi_res"
                android:contentDescription="@string/image_default_desc"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_username"
                    android:layout_width="275dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/alert_light_frame"
                    android:ems="10"
                    android:hint="@string/login_type_username"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    tools:text="@string/login_type_username" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="275dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/alert_light_frame"
                    android:ems="10"
                    android:hint="@string/login_type_password"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    tools:text="@string/login_type_password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                style="@android:style/Widget.Button"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@color/colorPrimary"
                android:text="@string/login_button"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#fff" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingTop="16dp"
            android:text="@string/login_powered_by"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>