<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_menu_start"
            android:title="@string/nav_drawer_main" />
    </group>

    <group
        android:id="@+id/nav_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_upcoming"
            android:title="@string/nav_drawer_upcoming" />
        <item
            android:id="@+id/nav_holiday"
            android:icon="@drawable/ic_menu_holiday"
            android:title="@string/nav_drawer_holidays" />
        <item
            android:id="@+id/nav_birthday"
            android:icon="@drawable/ic_menu_birthday"
            android:title="@string/nav_drawer_birthday" />
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_menu_other_events"
            android:title="@string/nav_drawer_other" />
    </group>

    <item android:title="@string/nav_drawer_user_options">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:title="@string/nav_drawer_login" />
            <item
                android:id="@+id/nav_reg"
                android:title="@string/nav_drawer_registration" />

        </menu>
    </item>

</menu>
