<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutsHolder">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_add_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/add_event_name"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_add_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/add_event_date"
                    android:inputType="date"
                    android:paddingTop="15dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_new_event_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/add_event_tip"
                    android:textSize="11sp"
                    android:textStyle="italic" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLayout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="right">

            <Button
                android:id="@+id/button_add_event"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/add_event_add"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="normal|bold" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>