...
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/main_screen_upcoming"
                    android:textColor="#fff"
                    android:textStyle="normal|bold|italic" />

                <Button
                    android:id="@+id/button_ms_holiday"
                    android:layout_width="50dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
...
